feat: implement effective validation property
