# apps/bixarena/api/src/main/java/org/sagebionetworks/bixarena/api/model/entity/BattleEntity.java
@@ -45,4 +45,7 @@ public class BattleEntity {
 
   @Column(name = "ended_at")
   private OffsetDateTime endedAt;
+
+  @Column(name = "effective_validation_id")
+  private UUID effectiveValidationId;
 }
